--- a/k8s/application.yaml
+++ b/k8s/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/maxengna/To-Do-List-Devop-Process-.git
-    targetRevision: HEAD
+    targetRevision: main
     path: k8s 
   destination:
     server: https://kubernetes.default.svc
