--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,23 +2,23 @@ version: '3'
 
 services: 
   mysql:
-    image: omartarekabdelall/todo-list-app:database
+    image: maxdev888/todo-list-app:database
     ports:
       - 3000:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=omar1234 
+      - MYSQL_ROOT_PASSWORD=maxdev789
     restart: always
     volumes:
       - mysqldb:/var/lib/mysql
   
   frontend:
-    image: omartarekabdelall/todo-list-app:frontend
+    image: maxdev888/todo-list-app:frontend
     ports:
       - 4173:4173
     restart: always
 
   backend:
-    image: omartarekabdelall/todo-list-app:backend
+    image: maxdev888/todo-list-app:backend
     ports:
       - 8081:8081
     restart: always
