--- a/k8s/database-statefulset.yaml
+++ b/k8s/database-statefulset.yaml
@@ -21,7 +21,7 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  mysql-root-pass: b21hcjEyMzQ=
+  mysql-root-pass: bWF4ZGV2Nzg5
 ---
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
@@ -66,7 +66,7 @@ spec:
     spec:
       containers:
       - name: mysql-container
-        image: omartarekabdelall/todo-list-app:database-78
+        image: maxdev888/todo-list-app:database-78
 #        imagePullPolicy: Always
         ports:
         - containerPort: 3306
