--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: omartarekabdelall/todo-list-app:frontend-78
+      - image: maxdev888/todo-list-app:frontend-78
         name: frontend-container
         ports:
         - containerPort: 4173
