--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -17,6 +17,6 @@ spec:
     automated:
       prune: true
       selfHeal: true
-    # syncOptions:
-    #   - CreateNamespace=true
+    syncOptions:
+      - CreateNamespace=true
        
