--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -3,56 +3,73 @@ def gv
 pipeline {
     agent any
     stages {
-    
         stage('Setup Environment')
         {
             steps {
                 script {
-                    gv = load "${WORKSPACE}/Jenkins/script.groovy" 
-                    
-                    env.FRONTEND_IMAGE = "maxdev888/todo-list-app:frontend-"
-                    env.BACKEND_IMAGE = "maxdev888/todo-list-app:backend-"
-                    env.DATABASE_IMAGE = "maxdev888/todo-list-app:database-"
+                    gv = load "${WORKSPACE}/Jenkins/script.groovy"
+
+                    env.FRONTEND_IMAGE = 'maxdev888/todo-list-app:frontend-'
+                    env.BACKEND_IMAGE = 'maxdev888/todo-list-app:backend-'
+                    env.DATABASE_IMAGE = 'maxdev888/todo-list-app:database-'
                     env.GITHUB_TOKEN = credentials('github-token')
+                    env.MANIFEST_REPO = 'manifests-repo'
                 }}
+            }
+
+        stage('clean workspace')
+        {
+            steps {
+                deleteDir()
+            }
+        }
+
+        stage('Checkout Repository')
+        {
+            steps {
+                checkout scm
+            }
         }
 
         stage('Build Images')
         {
             steps {
-                script{
-                    gv.buildImage()  
+                script {
+                    gv.buildImage()
                 }}
-        }
-          
+            }
 
         stage('Push to DockerHub')
         {
             steps {
-                script{
-                    gv.pushImage() 
+                script {
+                    gv.pushImage()
                 }}
-        }
-           
+            }
 
-         stage('Update K8s Manifests')
+        stage('update K8s Manifests and Push to GitHub')
         {
             steps {
-                script{
-                     gv.updateK8s() 
-                }}
+                script {
+                    gv.updateTag()
+                }   }
+            }
+
+        // stage('Update K8s Manifests')
+        // {
+        //     steps {
+        //         script {
+        //             gv.updateK8s()
+        //         }}
+        //     }
+
+        // stage('Update GitHub Repo')
+        // {
+        //     steps {
+        //         script {
+        //                 gv.githubPush()
+        //         }}
+        //     }
+
+        // }
         }
-            
-
-         stage('Update GitHub Repo')
-        {
-            steps {
-                script{
-                        gv.githubPush()
-                }}
-        }
-            
-
-    }
-}
-
