--- a/argocd/frontend-deployment.yaml
+++ b/argocd/frontend-deployment.yaml
@@ -38,7 +38,7 @@ spec:
     - protocol: TCP 
       port: 4173
       targetPort: 4173
-      nodePort: 30000
+      # nodePort: 30000
   selector:
     app: todolist-app
     tier: frontend
