--- a/argocd/ingress.yaml
+++ b/argocd/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my-ingress-svc
+  name: ingress-svc
   namespace: k8-deployment
 spec:
   ingressClassName: nginx
