--- a/argocd/ingress.yaml
+++ b/argocd/ingress.yaml
@@ -11,7 +11,7 @@ spec:
         paths:
           - path: /
             pathType: Prefix
-            frontend:
+            backend:
               service:
                 name: frontend
                 port:
